--- a/yum-cart/values.yaml
+++ b/yum-cart/values.yaml
@@ -62,8 +62,8 @@ ingress:
   className: "nginx"
   annotations: 
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/use-regex: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -71,7 +71,7 @@ ingress:
     - host: ac04d4c846f284bc5a96ae885e80cf00-640419438.us-east-1.elb.amazonaws.com
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
